--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,12 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #ffffff;
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+  --color-primary: #494949;
+  --color-secondary: #1B1B1B;
+  --color-Gray4: #666666;
 }
 
 @theme inline {
@@ -10,6 +15,9 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-primary: #494949;
+  --color-secondary: #1B1B1B;
+  --color-Gray4: #666666;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,8 +27,16 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+html, body {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  /* background-color: #F5F5F5;  */
+  background-color: #F5F5F5;/* Center the content horizontally */
+  scrollbar-width: none;
+  /* scroll-behavior: smooth; */
+ 
 }
+
+
+
