--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --color-primary: #494949;
-  --color-secondary: #1B1B1B;
+  --color-secondary: #1b1b1b;
   --color-Gray4: #666666;
 }
 
@@ -16,7 +16,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --color-primary: #494949;
-  --color-secondary: #1B1B1B;
+  --color-secondary: #1b1b1b;
   --color-Gray4: #666666;
 }
 
@@ -27,16 +27,14 @@
   }
 }
 
-html, body {
+html,
+body {
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
   /* background-color: #F5F5F5;  */
-  background-color: #F5F5F5;/* Center the content horizontally */
+  background-color: #f5f5f5; /* Center the content horizontally */
   scrollbar-width: none;
+
   /* scroll-behavior: smooth; */
- 
 }
-
-
-
