--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,5 @@ body {
   /* background-color: #F5F5F5;  */
   background-color: #f5f5f5; /* Center the content horizontally */
   scrollbar-width: none;
-
-  /* scroll-behavior: smooth; */
+  scroll-behavior: smooth;
 }
